# ollama-desktop

./: .gitignore  CONVERSATION_CONTEXT_ROADMAP.md  PERFORMANCE_FIXES.md  PHASE_3_SUMMARY.md  PHASE_3_TEST_SUMMARY.md  QDRANT_AUTO_START_SOLUTION.md  QDRANT_LAZY_START_SOLUTION.md  README.md  components.json  guide.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tauri.android.json  tauri.ios.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: mobile.yml
docs/: mobile-setup.md
patches/jetscii/src/: simd.rs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250710_add_weight_and_thread_settings.sql
src-tauri/src/: audit_log.rs  chunk.rs  config.rs  context_manager.rs  db.rs  embeddings.rs  file_ingest.rs  file_tools.rs  lib.rs  ollama_client.rs  qdrant_service.rs  rag.rs  shell_exec.rs  tool.rs  vector_db.rs  web_search.rs
src/components/: AttachmentDropZone.tsx  AttachmentTile.tsx  AuditLogModal.tsx  ChatInput.tsx  ChatPane.tsx  ChatStatus.tsx  ModelPicker.tsx  ServerSettingsModal.tsx  SettingsDialog.tsx  ThreadSettingsModal.tsx  ToolPermissionModal.tsx  ToolPicker.tsx  ToolStatusIndicator.tsx  ToolsSidebar.tsx
src/components/chat/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  MessageActions.tsx  SkeletonBubble.tsx  index.ts
src/components/commands/: CommandPalette.tsx
src/hooks/: useTools.ts
src/pages/: index.tsx  settings.tsx
src/stores/: appConfig.ts  chatStore.ts  permissionStore.ts  projectStore.ts  threadSettingsStore.ts
(+23 files in other folders)
