[package]
name = "ollama-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ollama_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qdrant-client = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
futures-util = "0.3"
async-trait = "0.1"
once_cell = "1"
anyhow = "1"
mime_guess = "2"
pdf-extract = "0.9"
docx = "1"
tiktoken-rs = "0.5"
tokio-stream = "0.1"
tokio = { version = "1", features = ["fs"] }
path-clean = "0.1"

[patch.crates-io]
jetscii = { path = "../patches/jetscii" }

